Project

General

Profile

Actions

Bug #44172

closed

cephfs-journal-tool: cannot set --dry_run arg

Added by Dan van der Ster about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Category:
fsck/damage handling
Target version:
% Done:

0%

Source:
Community (user)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

cephfs-journal-tool seems to support a --dry_run argument but I'm not able to pass it to the tool.

I believe I tried all the possibilities:

[root@lumupgtest ~]# cephfs-journal-tool --dry_run --rank cephfs:0 event recover_dentries summary
Error ((22) Invalid argument)
2020-02-17 17:35:23.424 7f4c92c68900  4 waiting for MDS map...
2020-02-17 17:35:23.424 7f4c92c68900  4 Got MDS map 126130
2020-02-17 17:35:23.424 7f4c92c68900 10 main: JournalTool::main 
2020-02-17 17:35:23.424 7f4c92c68900 -1 main: missing mandatory "--rank" argument

[root@lumupgtest ~]# cephfs-journal-tool --rank=cephfs:0 --dry_run event recover_dentries summary
2020-02-17 17:36:25.811 7f38ce4b3900  4 waiting for MDS map...
2020-02-17 17:36:25.811 7f38ce4b3900  4 Got MDS map 126130
2020-02-17 17:36:25.811 7f38ce4b3900 10 main: JournalTool::main 
2020-02-17 17:36:25.811 7f38ce4b3900  4 main: JournalTool: connecting to RADOS...
2020-02-17 17:36:25.816 7f38ce4b3900  4 main: JournalTool: resolving pool 2
Bad command '--dry_run'
2020-02-17 17:36:25.816 7f38ce4b3900  4 main: JournalTool: creating IoCtx..
2020-02-17 17:36:25.816 7f38ce4b3900  4 main: Executing for rank 0
Error ((22) Invalid argument)

[root@lumupgtest ~]# cephfs-journal-tool --rank=cephfs:0 event --dry_run recover_dentries summary
2020-02-17 17:36:38.046 7f6e8ab4c900  4 waiting for MDS map...
2020-02-17 17:36:38.046 7f6e8ab4c900  4 Got MDS map 126130
2020-02-17 17:36:38.047 7f6e8ab4c900 10 main: JournalTool::main 
2020-02-17 17:36:38.047 7f6e8ab4c900  4 main: JournalTool: connecting to RADOS...
2020-02-17 17:36:38.051 7f6e8ab4c900  4 main: JournalTool: resolving pool 2
2020-02-17 17:36:38.052 7f6e8ab4c900  4 main: JournalTool: creating IoCtx..
2020-02-17 17:36:38.052 7f6e8ab4c900  4 main: Executing for rank 0
Error (2020-02-17 17:36:38.052 7f6e8ab4c900 -1 main_event: Unknown argument '--dry_run'
(22) Invalid argument)

[root@lumupgtest ~]# cephfs-journal-tool --rank=cephfs:0 event recover_dentries --dry_run summary
2020-02-17 17:36:48.930 7fc640e73900  4 waiting for MDS map...
2020-02-17 17:36:48.931 7fc640e73900  4 Got MDS map 126130
2020-02-17 17:36:48.931 7fc640e73900 10 main: JournalTool::main 
2020-02-17 17:36:48.931 7fc640e73900  4 main: JournalTool: connecting to RADOS...
2020-02-17 17:36:48.935 7fc640e73900  4 main: JournalTool: resolving pool 2
2020-02-17 17:36:48.936 7fc640e73900  4 main: JournalTool: creating IoCtx..
2020-02-17 17:36:48.936 7fc640e73900  4 main: Executing for rank 0
Unknown argument: '--dry_run'
Error ((22) Invalid argument)

[root@lumupgtest ~]# cephfs-journal-tool --rank=cephfs:0 event recover_dentries summary --dry_run
2020-02-17 17:36:55.133 7fb451386900  4 waiting for MDS map...
2020-02-17 17:36:55.133 7fb451386900  4 Got MDS map 126130
2020-02-17 17:36:55.133 7fb451386900 10 main: JournalTool::main 
2020-02-17 17:36:55.134 7fb451386900  4 main: JournalTool: connecting to RADOS...
2020-02-17 17:36:55.138 7fb451386900  4 main: JournalTool: resolving pool 2
2020-02-17 17:36:55.139 7fb451386900  4 main: JournalTool: creating IoCtx..
2020-02-17 17:36:55.139 7fb451386900  4 main: Executing for rank 0
Unknown argument: '--dry_run'
Error ((22) Invalid argument)

Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #45221: nautilus: cephfs-journal-tool: cannot set --dry_run argResolvedWei-Chung ChengActions
Copied to CephFS - Backport #45222: octopus: cephfs-journal-tool: cannot set --dry_run argResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly about 4 years ago

  • Status changed from New to Triaged
  • Assignee set to Milind Changire
  • Target version set to v16.0.0
  • Source set to Community (user)
  • Backport set to octopus,nautilus
Actions #2

Updated by Milind Changire about 4 years ago

  • Pull request ID set to 33928

Now you can specify --dry_run after "event" on the command-line.

Actions #3

Updated by Milind Changire about 4 years ago

  • Status changed from Triaged to In Progress
Actions #4

Updated by Milind Changire about 4 years ago

correction to note#2

--dry-run must be specified after "recover_dentries" command only as an optional argument

Actions #5

Updated by Greg Farnum about 4 years ago

  • Status changed from In Progress to Pending Backport
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #45221: nautilus: cephfs-journal-tool: cannot set --dry_run arg added
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #45222: octopus: cephfs-journal-tool: cannot set --dry_run arg added
Actions #8

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF