cephfs-journal-tool: correctly parse --dry_run argument

Correctly parse --dry_run argument and make it available to the
"recover_dentries" command.

Fixes: https://tracker.ceph.com/issues/44172
Signed-off-by: Milind Changire <mchangir@redhat.com>